# learning-cmake

./: CMakeLists.txt  README.md
cats/: CMakeLists.txt
cats/include/: Cats.hpp  ScottishFold.hpp  Siamese.hpp
cats/src/: Cats.cpp  ScottishFold.cpp  Siamese.cpp
cmake/: analysis.cmake  catch2_testing.cmake  cppcheck_analysis.cmake
cmake/modules/: FindCppCheck.cmake
cprint/: CMakeLists.txt
cprint/include/: cprint.hpp
cprint/src/: cprint.cpp
include/: Cat.hpp
src/: Cat.cpp  main.cpp
test/: test_cat.cpp  test_cats.cpp  test_fibbo.cpp
vmath/: CMakeLists.txt
vmath/include/vmath/: Vector.hpp  ver.hpp.in
